2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: In RetryBackend, only Cleanup+Initialize if the
	backend isn't configured. Fixes problem with backends beining
	initialized twice (reproduce by clearing prefs, launching Tasque,
	choosing Local File backend, and noticing that no category is
	selected).

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Rtm.cs: Make lastRequestTime static, so that new Rtm instances
	obey it. Fixes problem where after authenticating RTM for the first
	time, task list came back truncated like in bug #562026.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Makefile.am: Add OSXApplication.cs to EXTRA_DIST and POTFILES.in.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* mac-prebuild.sh:
	* mac-postbuild.sh:
	* tasque-mac.csproj: Update project to actually work on a Mac.

	* bundle-mac-app.sh: Copy RtmNet.dll and all .mdb files into bundle.
	* osx/Contents/MacOS/Tasque: Run with --debug.

	* src/TaskWindow.cs: ShowWindow only shows; use new ToggleWindowVisible
	method for toggle support.
	* src/Application.cs: Use ToggleWindowVisible when tray icon is activated.
	Fix #if directives to have proper Mac support.
	* src/OSXApplications.cs: Add Window menu with ShowTasksAction.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque-mac.csproj:
	* tasque-mac.sln: Add solution/project for building OS X version of Tasque.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* tasque.csproj: Add Hiveminder and SQLite backends, and requisite
	references, as well as OSXApplication.cs.
	
	* winbin/Mono.Data.Sqlite.dll:
	* winbin/sqlite3.dll: Add dependencies for SQLite backend.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Rtm.cs: Limit API requests to no more than one per second. Last
	fix for bug #562026. Adds some noticeable slowdown to certain actions
	(like refreshing tasks and creating tasks), but it is necessary. A